calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik-public
  tls:
    - hosts:
        - "books.felix-prasse.de"
      secretName: "calibre-cert"
  rules:
    - host: "books.felix-prasse.de"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
